--- a/app/src/main/res/layout/activity_admin_lista_dispositivos_prestados.xml
+++ b/app/src/main/res/layout/activity_admin_lista_dispositivos_prestados.xml
@@ -34,6 +34,7 @@
                 android:background="#000000" />
 
             <Button
+                android:id="@+id/btnDetallesPrestados"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Detalles"
